[package]
name = "kasumi"
version = "0.1.0"
authors = ["extrasharp <genericpb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.2"
crossbeam-utils = "0.7"
cpal = {git = "https://github.com/RustAudio/cpal" }
hound = "3"
ika = {path="/home/mel/documents/_programming/rust/ika"}
smallvec = "1"

petgraph = "0.5"
