[package]
name = "kasumi"
version = "0.1.0"
authors = ["extrasharp <genericpb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.2"
hound = "3"
petgraph = "0.5"
smallvec = "1"

cpal = {git = "https://github.com/RustAudio/cpal" }

ika = {path="/home/mel/documents/_programming/rust/ika"}
